--- a/index.html
+++ b/index.html
@@ -4,9 +4,137 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
   <title>Edie</title>
 </head>
 <body>
+  <!-- <button id="btn_menu" class="burger__menu">
+    <span class="burger__icon-top "></span>
+    <span class="burger__icon-meddle "></span>
+    <span class="burger__icon-bottom "></span>
+  </button> -->
+  <header>
+    <span>Edie</span>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>Services</li>
+        <li>Our Works</li>
+        <li>Clients</li>
+        <li>Contact </li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="main-home">
+      <p>Unhappy with your website?</p>
+      <h1>We create beautiful and fast web services</h1>
+      <img src="./src/images/heroImage.jpg" alt="">
+      <h2>Story, emotion and purpose</h2>
+      <p>We help transform your ideas into real world applications that will outperform your toughest competition and help you achieve your strategic goals in short period of time.</p>
+      
+      <form action="">
+        <label for="email">Want us to contact you?</label><br>
+        <input id="email" type="email"><button>JOIN</button>
+      </form>
+    </section>
+      <h2>We offer high demand services  </h2>
+
+      <article>
+        <img src="./src/images/UI_UX.JPG" alt="">
+        <h3>UI/UX Design</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis turpis.</p>
+        <button>Get started</button>
+      </article>
+
+      <article>
+        <img src="./src/images/Front_end.JPG" alt="">
+        <h3>UI/UX Design</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis turpis.</p>
+        <button>Get started</button>
+      </article>
+
+      <article>
+        <img src="./src/images/Back_end.JPG" alt="">
+        <h3>UI/UX Design</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis turpis.</p>
+        <button>Get started</button>
+      </article>
+    <section>
+
+    </section>
+    <section>
+      <h2>Good design means good business</h2>
+
+      <article>
+        <img src="./src/images/smarthome.jpg" alt="">
+        <p>Full stack application</p>
+        <h3>Smart home dashboard</h3>
+      </article>
+
+      <article>
+        <img src="./src/images/onboard.png" alt="">
+        <p>UX/UI design</p>
+        <h3>Onboard application</h3>
+      </article>
+
+      <article>
+        <img src="./src/images/booking.png" alt="">
+        <p>Mobile application</p>
+        <h3>Smart home dashboard</h3>
+      </article>
+
+      <article>
+        <img src="./src/images/juice-product.png" alt="">
+        <p>Front End applicati on</p>
+        <h3>Juice product homepage</h3>
+      </article>
+
+      <button>see more --></button>
+    </section>
+    <section>
+      <span>Meet the team </span>
+      <h2>We are chilled and a laidback team</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <div>
+        <img src="./src/images/person1.png" alt="">
+        <img src="./src/images/person2.png" alt="">
+        <img src="./src/images/person3.png" alt="">
+      </div>
+      <p>“Fast and outstanding resutls. Edie understands their customer’s needs. They have a young and talented team.”    </p>
+      <div>
+        <img src="./src/images/person4.png" alt="">
+        <h5>Carlos Tran</h5>
+        <p>The Decorate Gatsby</p>
+      </div>
+    </section>
+  </main>
+
+  <footer> 
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>Services</li>
+        <li>Our Works</li>
+        <li>Clients</li>
+        <li>Contact </li>
+      </ul>
+    </nav>
+
+    <div>
+      <span>Edie</span>
+      <a href=""><img src="./src/svg/instagram.svg" alt=""></a>
+      <a href=""><img src="./src/svg/linkedin.svg" alt=""></a>
+      <a href=""><img src="./src/svg/twitter.svg" alt=""></a>
+    </div>
+
+    <form action="">
+      <label for="email">Want us to contact you?</label><br>
+      <input id="email" type="email"><button>JOIN</button>
+    </form>
+    <span>created by <a href="https://github.com/cristiandrc/Error404#overview" target="_blank" >cristiandrc</a> - devChallenge.io</span>
+  </footer>
   
 </body>
 </html>
