funcionalidad del burger menu

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header">
     <div class="header-container">
       <span class="header-logo">Edie</span>
-      <nav class="header-menu">
+      <nav id="navbar" class="header-menu ">
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#services">Services</a></li>
