cambios al readme.md

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <input id="email" type="email" placeholder="Email"><button>JOIN</button>
       </form>
   
-      <p class="etiqueta">created by <a href="https://github.com/cristiandrc/" target="_blank" >cristiandrc</a> - devChallenge.io</p>
+      <p class="etiqueta">created by <a href="https://github.com/cristiandrc/edie" target="_blank" >cristiandrc</a> - devChallenge.io</p>
     </div>
   </footer>
   <script src="./src/index.js"></script>
